feat: show event distribution per topic
